[package]
name = "netscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "apps/greet",
    "apps/samples",
    "apps/baidu.com",
    "tauri-1.2.0",
    "tauri-egui",
    #"examples/egui_demo_app",
    #"examples/egui_demo_lib",
]
exclude = [
    "node_modules",
    "dist",
    "target",
    "third-party",
    "zipold",
    "experiment*",
]


[features]
#default = [ "custom-protocol" ]
#custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"
urlencoding = "2"
percent-encoding = "2"
serde = "1"
serde_json = "1"
serialize-to-javascript = "=0.1" # tauri/Cargo.toml

#tauri-macros = { version = "1.1" }
#tauri-runtime = { path = "./tauri-runtime-0.11.1" }
#tauri-runtime-wry = { path = "./tauri-runtime-wry-0.11.1" }
tauri-egui = { path = "./tauri-egui" }
chrono = "0.4.23"
regex = "1.7.0"
once_cell = "1.16.0"
md5 = "0.7.0"
uuid = "1.2.2"

[dependencies.tauri]
version = "1"
#path = "./tauri-1.1.1"
path = "./tauri-1.2.0"
features = [
    "shell-execute",
    "window-create",
    "system-tray",
    "icon-ico",
    "icon-png",
    "api-all",
    "protocol-asset",
    "custom-protocol",
    "fs-extract-api",
    "http-multipart",
]
[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "sync", "fs", "io-util", "time"]

#[dependencies.rustpython-vm]
#path = "../RustPython/vm"
#features = ["freeze-stdlib", "encodings", "importlib"]
#[dependencies.rustpython-pylib]
#path = "../RustPython/pylib"
#features = [ "freeze-stdlib" ]
#[dependencies.rustpython-stdlib]
#path = "../RustPython/stdlib"

[dev-dependencies]
#egui_demo_app = { path = "examples/egui_demo_app" }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
#gtk = { version = "0.16", features = [ "v3_20" ] }

[build-dependencies]
#tauri-build = { version = "1.1", features = [] }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 1
#overflow-checks = false


# [[example]]
# name = "api"
# path = "examples/api/src-tauri"
# [[example]]
# name = "streaming"
# path = "examples/streaming/main.rs"
