[package]
name = "netscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "apps/greet",
    "apps/samples",
    "apps/flatbuffers",
    "packages/flatcollect",
    "packages/baidu.com",
    "tauri-1.2.0",
    "tauri-egui",
    #"examples/egui_demo_app",
    #"examples/egui_demo_lib",
]
exclude = [
    "tauri-sys",
    "node_modules",
    "dist",
    "target",
    "third-party",
    "zipold",
    "experiment*",
]


[features]
#default = [ "custom-protocol" ]
#custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
thiserror = "1"
directories = "4"
once_cell = "1.16"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
uuid = "1.2"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
async-channel = "1.8"
tokio-tungstenite = "0.18"

url = "2.2"
urlencoding = "2"
percent-encoding = "2"
regex = "1.7"
serde = "1"
serde_json = "1"
serialize-to-javascript = "=0.1" # tauri/Cargo.toml
#bitflags = "1"
flatbuffers = "22.10"

#tauri-macros = { version = "1.1" }
#tauri-runtime = { path = "./tauri-runtime-0.11.1" }
#tauri-runtime-wry = { path = "./tauri-runtime-wry-0.11.1" }

tauri-egui = { path = "./tauri-egui" }

[dependencies.tauri]
version = "1"
#path = "./tauri-1.1.1"
path = "./tauri-1.2.0"
features = [
    "shell-execute",
    "window-create",
    "system-tray",
    "icon-ico",
    "icon-png",
    "api-all",
    "protocol-asset",
    "custom-protocol",
    "fs-extract-api",
    "http-multipart",
]
[dependencies.tokio]
version = "1"
features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "time",
    "io-std",
    "macros",
    "signal",
]
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "stream", "gzip", "cookies", "multipart"]

#[dependencies.rustpython-vm]
#path = "../RustPython/vm"
#features = ["freeze-stdlib", "encodings", "importlib"]
#[dependencies.rustpython-pylib]
#path = "../RustPython/pylib"
#features = [ "freeze-stdlib" ]
#[dependencies.rustpython-stdlib]
#path = "../RustPython/stdlib"

[dev-dependencies]
#egui_demo_app = { path = "examples/egui_demo_app" }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
#gtk = { version = "0.16", features = [ "v3_20" ] }

[build-dependencies]
#tauri-build = { version = "1.1", features = [] }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 1
#overflow-checks = false


# [[example]]
# name = "api"
# path = "examples/api/src-tauri"
# [[example]]
# name = "streaming"
# path = "examples/streaming/main.rs"
