[package]
name = "example-customize-extractor-error"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { path = "../axum/axum" }
axum-extra = { path = "../axum/axum-extra", features=["protobuf"] }
axum-macros = { path = "../axum/axum-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bytes = "1.1.0"
http = "0.2"
flatbuffers = "22.10"

hyper = {version="1.0.0-rc.1", features=["full"]}
http-body = "1.0.0-rc.1"
http-body-util = "0.1.0-rc.1"

prost = { version = "0.11" }