[package]
name = "loadwa"
version = "0.1.0"
authors = ["jy <jywww@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
default = ["console_error_panic_hook"]

[dependencies]
# greet = { path = "./crates/greet" }
cfg-if = "1"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
